--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -8,19 +8,21 @@
 
 <div class="container fundo">
 
-	  <div class="table-responsive">
-							<table class="table table-bordered text-center" style="background-color: white;">
+	  <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
+							<table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
 								<tr class="text-primary">
-									<th class="cabecalho text-primary active" colspan="4"><center>Novas Solicitações de Benefícios</center></th>
+									<th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
+										<center><h3>Novas Solicitações de Benefícios</h3></center>
+									</th>
 								</tr>
 								<tr>
-									<th class="cabecalho text-primary active" colspan="1">Nº</th>
-									<th class="cabecalho text-primary active" colspan="1"><center>Nome</center></th>
-									<th class="cabecalho text-primary active" colspan="1"> <center>Data de Solicitação</center></th>
-									<th class="cabecalho text-primary active" colspan="1"><center>Situação</center></th>
+									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white">Nº</th>
+									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
+									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"> <center>Data de Solicitação</center></th>
+									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -31,7 +33,7 @@
 
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -41,7 +43,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -51,7 +53,7 @@
 									</td>									
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -61,7 +63,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -71,7 +73,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -81,7 +83,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -91,7 +93,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -101,7 +103,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -110,7 +112,7 @@
 										</button>
 									</td>								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -119,7 +121,7 @@
 										</button>
 									</td>								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner Ereno Quincozes </td>
 									<td> 25/03/2019 </td>
 									<td>
@@ -128,7 +130,7 @@
 										</button>
 									</td>								</tr>
 								<tr>
-									<td class="cabecalho text-primary active">1</td>
+									<td class="fundoTransparente">1</td>
 									<td> Vagner  Quincozes </td>
 									<td> 25/03/2019 </td>	
 									<td>
@@ -157,39 +159,39 @@
 						<table class="" style="background-color: white;">
 								<tr>
 									<td><div style="text-align: right;">Nome completo:&nbsp;</div> </td>
-									<td><input type="text" id="nomeCompleto" value="Vagner Ereno Quincozes" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="nomeCompleto" value="Vagner Ereno Quincozes" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">CPF:&nbsp;</div></td>
-									<td><input type="text" id="cpf" value="040.459.542-10" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="cpf" value="040.459.542-10" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Data de Nascimento:&nbsp;</div></td>
-									<td><input type="text" id="dataDeNascimento" value="18/05/2017" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="dataDeNascimento" value="18/05/2017" style="width:400px;font-size: 15px"></input></td>
 								</tr>								
 								<tr>
 									<td><div style="text-align: right;">Comprovante de Matrícula:&nbsp;</div></td>
-									<td><button class="primary" id="comprovanteDeMatricula">Baixar arquivo PDF.. </button> </td>
+									<td><button class="btn btn-primary" id="comprovanteDeMatricula"><i class="fas fa-download"> Baixar arquivo PDF.. </i></button> </td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Comprovante de Residência:&nbsp;</div></td>
-									<td><button class="primary" id="comprovanteDeResidencia">Baixar arquivo PDF.. </button></td>
+									<td><button class="btn btn-primary" id="comprovanteDeResidencia"> <i class="fas fa-download"> Baixar arquivo PDF.. </i></button></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Rua:&nbsp;</div></td>
-									<td><input type="text" id="rua" value="Barão do Amazonas" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="rua" value="Barão do Amazonas" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Nº:&nbsp;</div></td>
-									<td><input type="text" id="numeroCasa" value="210" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="numeroCasa" value="210" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Bairro:&nbsp;</div></td>
-									<td><input type="text" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
 								</tr>
 								<tr>
 									<td><div style="text-align: right;">Celular:&nbsp;</div></td>
-									<td><input type="text" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
+									<td><input type="text" class="form-control" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
 									
 								</tr>
 								<tr>
