--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -6,6 +6,9 @@
 
 
 <div class="container fundo">
+	<div class="row" style="background-color:rgba(0,0,0,0.5);">
+
+	</div>
    <div class="row">
 	<div class="col-sm-1"> 
 	
@@ -13,27 +16,29 @@
 	
 	<div class="col-sm-10">
 	<br><br>
-		<div class="card bg-light mb-3" style="max-width: 400rem;">
-			<div class="card-body">
+		<div class="card" style="max-width: 400rem; background-color:rgba(0,0,0,0.5); color: white">
+			<div class="card-body" >
 				
-				<center><H3> Concessão de Trajetos </h3></center>
+				<center><H3>Concessão de Trajetos </h3></center>
 				<div class="row"> 
-					&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="botaoAdicionar"></input>
+					&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+											<i class="fas fa-plus-square"></i>
+										</button>
 					</div>
 				</div>
-				<div class=row" style="text-align:center">
+				<div class="row" style="text-align:center">
 					<div class="col-sm-1"><h5> Código </h5></div>
-					<div class="col-sm-4"><h5> Início </h5></div>
-					<div class="col-sm-4"><h5> Fim </h5></div>
-					<div class="col-sm-2"><h5> Paradas </h5></div>
+					<div class="col-sm-4"><h5> Data de inicio </h5></div>
+					<div class="col-sm-4"><h5> Data de fim </h5></div>
+					<div class="col-sm-2"><h5> Autorização </h5></div>
 					<div class="col-sm-1"><h5> Botões</div>
 				</div>
-				<div class=row" style="text-align:center">
+				<div class="row" style="text-align:center">
 					<div class="col-sm-1"> 1 </div>
-					<div class="col-sm-4"> Centro </div>
-					<div class="col-sm-4"> Ibirapuitã </div>
-					<div class="col-sm-2"> 5 </div>
-					<div class="col-sm-1"> <i class="fas fa-edit"> </i> </div>
+					<div class="col-sm-4"> 24/01/2019 </div>
+					<div class="col-sm-4"> 24/03/2019 </div>
+					<div class="col-sm-2"> <i class="fas fa-download"> </i> </div>
+					<div class="col-sm-1"> <i class="fas fa-info"> </i> &nbsp; <i class="fas fa-toggle-on"> </i></div>
 				</div>
 			</div>
 		</div>
@@ -46,3 +51,53 @@
 	
   </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+         <div class="modal-content">
+             <div class="modal-header">
+			     <h4 class="modal-title">ADICIONAR CONCESSÃO DE TRAJETO</h4>
+                 <button type="button" class="close" data-dismiss="modal">
+					<span>&times;</span>
+				 </button>
+             </div>
+             <div class="modal-body">
+				
+				<div class="container-fluid"> 
+					<div class="row">
+						<table class="" style="background-color: white;">
+								<tr>
+									<td><div style="text-align: right;">Código:&nbsp;</div> </td>
+									<td><input type="text" class="form-control" id="nomeCompleto" value="" style="width:400px;font-size: 15px"></input></td>
+								</tr>
+								<tr>
+									<td><div style="text-align: right;">Data de inicio:&nbsp;</div> </td>
+									<td><input type="text" class="form-control" id="nomeCompleto" value="" style="width:400px;font-size: 15px"></input></td>
+								</tr>
+								<tr>
+									<td><div style="text-align: right;">Data de fim:&nbsp;</div> </td>
+									<td><input type="text" class="form-control" id="nomeCompleto" value="" style="width:400px;font-size: 15px"></input></td>
+								</tr>
+								<tr>
+									<td><div style="text-align: right;">Documento de Autorização:&nbsp;</div> </td>
+									<td><input type="text" class="form-control" id="nomeCompleto" value="" style="width:400px;font-size: 15px"></input></td>
+								</tr>
+						</table>
+					</div>
+				</div>
+				 
+				 		 
+				 
+				 
+				 
+             </div>
+			 
+             <div class="modal-footer">
+			    <button type="button" class="btn btn-success" data-dismiss="modal">Salvar</button>
+
+                 <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+             </div>
+         </div>
+    </div>
+ </div>
