Alterado para o modelo de layout do maurício e as cores dos botões

--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -27,7 +27,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 
@@ -38,7 +38,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -48,7 +48,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>									
 								</tr>
@@ -58,7 +58,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -68,7 +68,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -78,7 +78,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -88,7 +88,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -98,7 +98,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								</tr>
@@ -108,7 +108,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>								</tr>
 								<tr>
@@ -117,7 +117,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>								</tr>
 								<tr>
@@ -126,7 +126,7 @@
 									<td> 25/03/2019 </td>
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>								</tr>
 								<tr>
@@ -135,7 +135,7 @@
 									<td> 25/03/2019 </td>	
 									<td>
 										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit"></i>
+											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
 								 </tr>
