--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -22,7 +22,7 @@
 				<center><H3>Concessão de Trajetos </h3></center>
 				<div class="row"> 
 					&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-plus-square"></i>
+											<i class="fas fa-plus-square" style="color:black"></i>
 										</button>
 					</div>
 				</div>
@@ -37,8 +37,8 @@
 					<div class="col-sm-1"> 1 </div>
 					<div class="col-sm-4"> 24/01/2019 </div>
 					<div class="col-sm-4"> 24/03/2019 </div>
-					<div class="col-sm-2"> <i class="fas fa-download"> </i> </div>
-					<div class="col-sm-1"> <i class="fas fa-info"> </i> &nbsp; <i class="fas fa-toggle-on"> </i></div>
+					<div class="col-sm-2"> <i class="fas fa-download" style="color:white"> </i> </div>
+					<div class="col-sm-1"> <i class="fas fa-toggle-on" style="color:white"> </i>&nbsp;<i class="fas fa-info-circle" style="color:white"> </i> </div>
 				</div>
 			</div>
 		</div>
