modificações nas view categoriaPassageiro e concessaoTrajeto

--- a/application/views/scripts/categoriaPassageiro/index.phtml
+++ b/application/views/scripts/categoriaPassageiro/index.phtml
@@ -12,7 +12,7 @@
 					 <table class="table">
 						<tbody class="Active">
 						  <tr>
-							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="estudante"> Estudante/Professor </a></td>
+							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="estudante"> Estudante</a></td>
 						  </tr>
 						  <tr>
 							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="idoso"> Pessoa Idosa </a></td>
