--- a/application/views/scripts/onibus-intermunicipal/index.phtml
+++ b/application/views/scripts/onibus-intermunicipal/index.phtml
@@ -19,8 +19,9 @@
                     <td>55</td>
                     <td>55</td>
                     <td>
-                        <button class="btn btn-info">
-                            <i class="fas fa-eye"></i>
+                        <button class="btn btn-info btn-labeled">
+                            <span class="btn-label">
+                            <i class="fas fa-eye"></i></span>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -32,8 +33,9 @@
                     <td>55</td>
                     <td>55</td>
                     <td>
-                        <button class="btn btn-info">
-                            <i class="fas fa-eye"></i>
+                        <button class="btn btn-info btn-labeled">
+                            <span class="btn-label">
+                            <i class="fas fa-eye"></i></span>
                             Visualizar Detalhes
                         </button>
                     </td>
@@ -45,8 +47,9 @@
                     <td>55</td>
                     <td>55</td>
                     <td>
-                        <button class="btn btn-info">
-                            <i class="fas fa-eye"></i>
+                        <button class="btn btn-info btn-labeled">
+                            <span class="btn-label">
+                            <i class="fas fa-eye"></i></span>
                             Visualizar Detalhes
                         </button>
                     </td>
