commit pro Vagner

--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -125,8 +125,8 @@
 						<div class="table-responsive">
 								<form method="post">
 								  <div class="form-group">
-									<label for="exampleInputEmail1">codigo</label>
-									<input type="text" class="form-control" name="codConcessao" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+									<label >dataInicio</label>
+									<input type="text" class="form-control" name="dataInicio">
 								  </div>
 
 								  <button type="submit" class="btn btn-primary">Submit</button>
