Cadastrando concessao de trajeto no banco de dados!

--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -125,8 +125,16 @@
 						<div class="table-responsive">
 								<form method="post">
 								  <div class="form-group">
-									<label >dataInicio</label>
+								  	<label >Código</label>
+									<input type="text" class="form-control" name="codConcessao">
+									<label >Data de Inicio</label>
 									<input type="text" class="form-control" name="dataInicio">
+									<label >Data de Vigência</label>
+									<input type="text" class="form-control" name="dataFim">
+									<label >Documento de Autorização</label>
+									<input type="text" class="form-control" name="docAutorizacao">
+									<label >Status</label>
+									<input type="text" class="form-control" name="statusConcessao">
 								  </div>
 
 								  <button type="submit" class="btn btn-primary">Submit</button>
